--- a/userguide.html
+++ b/userguide.html
@@ -1180,7 +1180,7 @@ just what it points to).</p></div>
 <div class="sect2">
 <h3 id="_replace_item">Replace item</h3>
 <div class="paragraph"><p><tt>HASH_REPLACE</tt> macros are equivalent to HASH_ADD macros except they attempt
-to find and delete the item first. If it find and deletes and item, it will
+to find and delete the item first. If it finds and deletes an item, it will
 also return that items pointer as an output parameter.</p></div>
 </div>
 <div class="sect2">
@@ -3026,7 +3026,7 @@ condition
 <div id="footer">
 <div id="footer-text">
 Version 1.9.9<br />
-Last updated 2014-02-25 21:47:51 EST
+Last updated 2014-06-26 08:25:37 EDT
 </div>
 </div>
 </body>
