--- a/userguide.html
+++ b/userguide.html
@@ -3011,7 +3011,7 @@ condition
 <div id="footer">
 <div id="footer-text">
 Version 1.9.9<br />
-Last updated 2014-11-18 22:07:27 EST
+Last updated 2015-07-16 12:07:26 EDT
 </div>
 </div>
 </body>
