Add Arthur, bump version to 2.0.0

--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -782,8 +782,7 @@ asciidoc.install(2);
 <td class="icon">
 <div class="title">Note</div>
 </td>
-<td class="content">uthash is no longer maintained as of 2015.  The ChangeLog is no longer
-maintained. See the git commit log.</td>
+<td class="content">The ChangeLog is no longer maintained. See the git commit log.</td>
 </tr></table>
 </div>
 </div>
@@ -1548,7 +1547,7 @@ Initial release
 <div id="footer">
 <div id="footer-text">
 Last updated
- 2016-06-28 14:48:36 EDT
+ 2016-07-01 11:06:56 EDT
 </div>
 </div>
 </body>
