formatting fix, year bump

--- a/userguide.html
+++ b/userguide.html
@@ -768,8 +768,9 @@ asciidoc.install(2);
 <body class="article">
 <div id="header">
 <h1>uthash User Guide</h1>
-<span id="author">Troy D. Hanson</span><br />
-<span id="revdate">Arthur O'Dwyer</span>
+<span id="author">Troy D. Hanson, Arthur O'Dwyer</span><br />
+<span id="revnumber">version 2.0,</span>
+<span id="revdate">July 2016</span>
 <div id="toc">
   <div id="toctitle">Table of Contents</div>
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
@@ -778,7 +779,6 @@ asciidoc.install(2);
 <div id="content">
 <div id="preamble">
 <div class="sectionbody">
-<div class="paragraph"><p>v2.0.0, July 2016</p></div>
 <div class="paragraph"><p>To download uthash, follow this link back to the
 <a href="https://github.com/troydhanson/uthash">GitHub project page</a>.
 Back to my <a href="http://troydhanson.github.io/">other projects</a>.</p></div>
@@ -3071,8 +3071,9 @@ condition
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
+Version 2.0<br />
 Last updated
- 2016-07-01 11:02:04 EDT
+ 2016-07-01 11:12:57 EDT
 </div>
 </div>
 </body>
