--- a/utlist.html
+++ b/utlist.html
@@ -1079,7 +1079,7 @@ elt
 <p>
   A pointer that will be assigned to each list element in succession (see
   example) in the case of iteration macros; or, the output pointer from
-  the search macros; or the element to be prepended to or replaced.
+  the search macros.
 </p>
 </dd>
 <dt class="hdlist1">
@@ -1275,8 +1275,7 @@ CDL_COUNT2(head, elt, count, next);</code></pre>
 <div id="footer">
 <div id="footer-text">
 Version 1.9.9<br />
-Last updated
- 2016-02-26 23:12:57 CET
+Last updated 2016-06-27 15:08:08 PDT
 </div>
 </div>
 </body>
