--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -1546,8 +1546,7 @@ Initial release
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated
- 2016-07-01 11:11:26 EDT
+Last updated 2016-07-01 15:45:47 PDT
 </div>
 </div>
 </body>
