--- a/userguide.html
+++ b/userguide.html
@@ -769,7 +769,7 @@ asciidoc.install(2);
 <div id="header">
 <h1>uthash User Guide</h1>
 <span id="author">Troy D. Hanson, Arthur O'Dwyer</span><br />
-<span id="revnumber">version 2.0,</span>
+<span id="revnumber">version 2.0.1,</span>
 <span id="revdate">July 2016</span>
 <div id="toc">
   <div id="toctitle">Table of Contents</div>
@@ -949,8 +949,7 @@ to the native package repositories for a number of Unix-y distros.</p></div>
 in C than exist today. There are faster hash tables, more memory-efficient hash
 tables, with very different API&#8217;s today. But, like driving a minivan, uthash is
 convenient, and gets the job done for many purposes.</p></div>
-<div class="paragraph"><p>As of July 2016, uthash is maintained by Arthur O&#8217;Dwyer. To accomodate future
-tags, the version was bumped to 2.0.0. The API remains compatible with 1.x.</p></div>
+<div class="paragraph"><p>As of July 2016, uthash is maintained by Arthur O&#8217;Dwyer.</p></div>
 </div>
 </div>
 </div>
@@ -3079,8 +3078,8 @@ condition
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 2.0<br />
-Last updated 2016-07-05 13:31:23 PDT
+Version 2.0.1<br />
+Last updated 2016-07-05 13:53:27 PDT
 </div>
 </div>
 </body>
