--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -782,9 +782,31 @@ asciidoc.install(2);
 <td class="icon">
 <div class="title">Note</div>
 </td>
-<td class="content">The ChangeLog is no longer maintained. See the git commit log.</td>
+<td class="content">This ChangeLog may be incomplete and/or incorrect. See the git commit log.</td>
 </tr></table>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_version_2_0_1_2016_07_05">Version 2.0.1 (2016-07-05)</h2>
+<div class="sectionbody">
+<div class="ulist"><ul>
+<li>
+<p>
+in-order insertion macros HASH_ADD_INORDER etc (thanks, Thilo Schulz!)
+</p>
+</li>
+<li>
+<p>
+by-hashvalue insertion macros HASH_ADD_BYHASHVALUE etc
+</p>
+</li>
+<li>
+<p>
+during key comparison, check hashvalue before doing a full memcmp
+</p>
+</li>
+</ul></div>
 </div>
 </div>
 <div class="sect1">
@@ -1546,7 +1568,7 @@ Initial release
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-07-01 15:45:47 PDT
+Last updated 2016-07-05 13:56:39 PDT
 </div>
 </div>
 </body>
