--- a/userguide.html
+++ b/userguide.html
@@ -2580,15 +2580,19 @@ performance.</p></div>
 </div>
 <div class="sect2">
 <h3 id="_hooks">Hooks</h3>
-<div class="paragraph"><p>You don&#8217;t need to use these hooks- they are only here if you want to modify
-the behavior of uthash.  Hooks can be used to change how uthash allocates
-memory, and to run code in response to certain internal events.</p></div>
+<div class="paragraph"><p>You don&#8217;t need to use these hooks&#8201;&#8212;&#8201;they are only here if you want to modify
+the behavior of uthash.  Hooks can be used to replace standard library functions
+that might be unavailable on some platforms, to change how uthash allocates
+memory, or to run code in response to certain internal events.</p></div>
+<div class="paragraph"><p>The <code>uthash.h</code> header will define these hooks to default values, unless they
+are already defined. It is safe either to <code>#undef</code> and redefine them
+after including <code>uthash.h</code>, or to define them before inclusion; for
+example, by passing <code>-Duthash_malloc=my_malloc</code> on the command line.</p></div>
 <div class="sect3">
-<h4 id="_malloc_free">malloc/free</h4>
+<h4 id="_specifying_alternate_memory_management_functions">Specifying alternate memory management functions</h4>
 <div class="paragraph"><p>By default this hash implementation uses <code>malloc</code> and <code>free</code> to manage memory.
 If your application uses its own custom allocator, this hash can use them too.</p></div>
 <div class="listingblock">
-<div class="title">Specifying alternate memory management functions</div>
 <div class="content">
 <pre><code>#include "uthash.h"
 
@@ -2606,14 +2610,29 @@ If your application uses its own custom allocator, this hash can use them too.</
 convenience on embedded platforms that manage their own memory.</p></div>
 </div>
 <div class="sect3">
+<h4 id="_specifying_alternate_standard_library_functions">Specifying alternate standard library functions</h4>
+<div class="paragraph"><p>Uthash also uses <code>strlen</code> (in the <code>HASH_FIND_STR</code> convenience macro, for
+example) and <code>memcmp</code> (as the method of comparing keys for equality). On
+platforms that do not provide these functions, you can substitute your own
+implementations.</p></div>
+<div class="listingblock">
+<div class="content">
+<pre><code>#undef uthash_memcmp
+#define uthash_memcmp(a,b,len) my_memcmp(a,b,len)
+
+#undef uthash_strlen
+#define uthash_strlen(s) my_strlen(s)</code></pre>
+</div></div>
+</div>
+<div class="sect3">
 <h4 id="_out_of_memory">Out of memory</h4>
 <div class="paragraph"><p>If memory allocation fails (i.e., the malloc function returned <code>NULL</code>), the
 default behavior is to terminate the process by calling <code>exit(-1)</code>. This can
 be modified by re-defining the <code>uthash_fatal</code> macro.</p></div>
-<div class="literalblock">
+<div class="listingblock">
 <div class="content">
 <pre><code>#undef uthash_fatal
-#define uthash_fatal(msg) my_fatal_function(msg);</code></pre>
+#define uthash_fatal(msg) my_fatal_function(msg)</code></pre>
 </div></div>
 <div class="paragraph"><p>The fatal function should terminate the process or <code>longjmp</code> back to a safe
 place. Uthash does not support "returning a failure" if memory cannot be
@@ -2630,14 +2649,9 @@ both of these hooks are undefined and thus compile away to nothing.</p></div>
 <h5 id="_expansion">Expansion</h5>
 <div class="paragraph"><p>There is a hook for the bucket expansion event.</p></div>
 <div class="listingblock">
-<div class="title">Bucket expansion hook</div>
 <div class="content">
-<pre><code>#include "uthash.h"
-
-#undef uthash_expand_fyi
-#define uthash_expand_fyi(tbl) printf("expanded to %d buckets\n", tbl-&gt;num_buckets)
-
-...</code></pre>
+<pre><code>#undef uthash_expand_fyi
+#define uthash_expand_fyi(tbl) printf("expanded to %d buckets\n", tbl-&gt;num_buckets)</code></pre>
 </div></div>
 </div>
 <div class="sect4">
@@ -2645,14 +2659,9 @@ both of these hooks are undefined and thus compile away to nothing.</p></div>
 <div class="paragraph"><p>This hook can be defined to code to execute in the event that uthash decides to
 set the <em>bucket expansion inhibited</em> flag.</p></div>
 <div class="listingblock">
-<div class="title">Bucket expansion inhibited hook</div>
 <div class="content">
-<pre><code>#include "uthash.h"
-
-#undef uthash_noexpand_fyi
-#define uthash_noexpand_fyi printf("warning: bucket expansion inhibited\n");
-
-...</code></pre>
+<pre><code>#undef uthash_noexpand_fyi
+#define uthash_noexpand_fyi printf("warning: bucket expansion inhibited\n")</code></pre>
 </div></div>
 </div>
 </div>
@@ -3079,7 +3088,7 @@ condition
 <div id="footer">
 <div id="footer-text">
 Version 2.0.1<br />
-Last updated 2016-07-05 13:53:27 PDT
+Last updated 2016-07-14 16:19:49 PDT
 </div>
 </div>
 </body>
