Bring into line with master 222e0d8a9c0330d12c7ab969f3f7231d33af3a13.

--- a/userguide.html
+++ b/userguide.html
@@ -877,6 +877,11 @@ OpenBSD
 FreeBSD
 </p>
 </li>
+<li>
+<p>
+Android
+</p>
+</li>
 </ul></div>
 <div class="sect3">
 <h4 id="_test_suite">Test suite</h4>
@@ -3088,7 +3093,7 @@ condition
 <div id="footer">
 <div id="footer-text">
 Version 2.0.1<br />
-Last updated 2016-07-14 16:19:49 PDT
+Last updated 2017-02-24 14:50:53 PST
 </div>
 </div>
 </body>
