--- a/utstring.html
+++ b/utstring.html
@@ -962,7 +962,7 @@ cellspacing="0" cellpadding="4">
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><code>utstring_done(s)</code></p></td>
-<td align="left" valign="top"><p class="table">dispose of a utstring (non-allocd)</p></td>
+<td align="left" valign="top"><p class="table">dispose of a utstring (non-alloc)</p></td>
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><code>utstring_printf(s,fmt,&#8230;)</code></p></td>
@@ -994,7 +994,7 @@ cellspacing="0" cellpadding="4">
 </tr>
 <tr>
 <td align="left" valign="top"><p class="table"><code>utstring_findR(s,pos,str,len)</code></p></td>
-<td align="left" valign="top"><p class="table">reverse search from pos a substring</p></td>
+<td align="left" valign="top"><p class="table">reverse search from pos for a substring</p></td>
 </tr>
 </tbody>
 </table>
@@ -1013,7 +1013,7 @@ It comes in forward and reverse varieties. The reverse search scans from the end
 the string backward. These take a position to start searching from, measured from 0
 (the start of the utstring).  A negative position is counted from the end of
 the string, so, -1 is the last position.  Note that in the reverse search, the
-initial position anchors to the <em>end</em> of the substring being searched for-
+initial position anchors to the <em>end</em> of the substring being searched for;
 e.g., the <em>t</em> in <em>cat</em>. The return value always refers to the offset where the
 substring <em>starts</em> in the utstring.  When no substring match is found, -1 is
 returned.</p></div>
@@ -1069,7 +1069,7 @@ parameter by adding to the string start address and subtracting from its length.
 <div id="footer">
 <div id="footer-text">
 Version 2.0.1<br />
-Last updated 2016-07-14 16:19:49 PDT
+Last updated 2017-02-24 14:50:53 PST
 </div>
 </div>
 </body>
