--- a/ChangeLog.html
+++ b/ChangeLog.html
@@ -788,6 +788,33 @@ asciidoc.install(2);
 </div>
 </div>
 <div class="sect1">
+<h2 id="_version_2_0_2_2017_03_02">Version 2.0.2 (2017-03-02)</h2>
+<div class="sectionbody">
+<div class="ulist"><ul>
+<li>
+<p>
+fix segfault in HASH_ADD_INORDER etc (thanks, Yana Kireyonok!)
+</p>
+</li>
+<li>
+<p>
+remove spurious cast to unsigned in utstring_len (thanks, Michal Sestrienka!)
+</p>
+</li>
+<li>
+<p>
+add uthash_memcmp and uthash_strlen for platforms without &lt;stdlib.h&gt; (thanks, Pawel Veselov!)
+</p>
+</li>
+<li>
+<p>
+fix a C++ incompatibility in utringbuffer
+</p>
+</li>
+</ul></div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_version_2_0_1_2016_07_05">Version 2.0.1 (2016-07-05)</h2>
 <div class="sectionbody">
 <div class="ulist"><ul>
@@ -1568,7 +1595,7 @@ Initial release
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-07-14 16:19:49 PDT
+Last updated 2017-03-02 11:34:48 PST
 </div>
 </div>
 </body>
