--- a/utlist.html
+++ b/utlist.html
@@ -770,8 +770,8 @@ asciidoc.install(2);
 <h1>utlist: linked list macros for C structures</h1>
 <span id="author">Troy D. Hanson</span><br />
 <span id="email"><code>&lt;<a href="mailto:tdh@tkhanson.net">tdh@tkhanson.net</a>&gt;</code></span><br />
-<span id="revnumber">version 2.0.1,</span>
-<span id="revdate">July 2016</span>
+<span id="revnumber">version 2.0.2,</span>
+<span id="revdate">March 2017</span>
 <div id="toc">
   <div id="toctitle">Table of Contents</div>
   <noscript><p><b>JavaScript must be enabled in your browser to display the table of contents.</b></p></noscript>
@@ -1274,8 +1274,8 @@ CDL_COUNT2(head, elt, count, next);</code></pre>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Version 2.0.1<br />
-Last updated 2016-07-14 16:19:49 PDT
+Version 2.0.2<br />
+Last updated 2017-03-02 11:35:31 PST
 </div>
 </div>
 </body>
